--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">Dagger2Example</string>
-    <string name="load_preference">Load preference</string>
+    <string name="load_preference">Click me</string>
     <string name="click_hint"><![CDATA[<click button>]]></string>
     <string name="network_text">Network connected? %1$s</string>
 
